<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent" 
   android:layout_height="wrap_content"
    android:layout_weight="1"
    android:background="#F3EFEA">
   <LinearLayout android:id="@+id/linearLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical" android:padding="5dp"
       android:background="#F3EFEA">

       <TextView
           android:id="@+id/nameText"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="輸入資料"
           android:textAppearance="?android:attr/textAppearanceLarge"
           android:background="#F3EFEA"
           android:textColor="#4A7D6B"/>

       <TextView
           android:id="@+id/textView3"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="姓名"
           android:background="#F3EFEA"
           android:textColor="#4A7D6B"/>

      <EditText android:id="@+id/nameEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" 
         android:imeOptions="actionNext" android:hint="@string/hint_name"
         android:inputType="textPersonName|textCapWords"
          ></EditText>

      <TextView
          android:id="@+id/textView2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="電話"
          android:background="#F3EFEA"
          android:textColor="#4A7D6B"
          />

      <EditText android:id="@+id/phoneEditText" 
         android:layout_width="match_parent" 
         android:layout_height="wrap_content" 
         android:imeOptions="actionNext" android:hint="@string/hint_phone" 
         android:inputType="phone"></EditText>

      <TextView
          android:id="@+id/textView7"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="緊急聯絡人1電話"
          android:background="#F3EFEA"
          android:textColor="#4A7D6B"/>

      <EditText android:id="@+id/smsphoneEditText1" 
         android:layout_width="match_parent" 
         android:layout_height="wrap_content" 
         android:imeOptions="actionNext" android:hint="@string/hint_smsphone_1" 
         android:inputType="phone"></EditText>
      
      <TextView
          android:id="@+id/textView7"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="緊急聯絡人2電話"
          android:background="#F3EFEA"
          android:textColor="#4A7D6B"/>

      <EditText android:id="@+id/smsphoneEditText2" 
         android:layout_width="match_parent" 
         android:layout_height="wrap_content" 
         android:imeOptions="actionNext" android:hint="@string/hint_smsphone_2" 
         android:inputType="phone"></EditText>
      
      <TextView
          android:id="@+id/textView7"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="緊急聯絡人3電話"
          android:background="#F3EFEA"
          android:textColor="#4A7D6B"/>

      <EditText android:id="@+id/smsphoneEditText3" 
         android:layout_width="match_parent" 
         android:layout_height="wrap_content" 
         android:imeOptions="actionNext" android:hint="@string/hint_smsphone_3" 
         android:inputType="phone"></EditText>
      
      <TextView
          android:id="@+id/textView4"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="E-mail"
          android:background="#F3EFEA"
          android:textColor="#4A7D6B"/>

      <EditText android:id="@+id/emailEditText"
         android:layout_width="match_parent" 
         android:layout_height="wrap_content" 
         android:imeOptions="actionNext" android:hint="@string/hint_email"
         android:inputType="textEmailAddress"></EditText>

      <TextView
          android:id="@+id/textView5"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="地址"
          android:background="#F3EFEA"
          android:textColor="#4A7D6B"/>

      <EditText android:id="@+id/addressEditText" 
         android:layout_width="match_parent" 
         android:layout_height="wrap_content" 
         android:imeOptions="actionNext" android:hint="@string/hint_address"
         android:inputType="textPostalAddress|textCapWords"></EditText>

      <TextView
          android:id="@+id/textView6"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="備註"
          android:background="#F3EFEA"
          android:textColor="#4A7D6B"/>

      <EditText android:id="@+id/noteEditText" 
         android:layout_width="match_parent" 
         android:layout_height="wrap_content" 
         android:imeOptions="actionDone" android:hint="@string/hint_note"
         android:inputType="textPostalAddress|textCapWords"></EditText>
      
      <Button android:id="@+id/saveContactButton" 
         android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:layout_marginTop="15dp"
         android:layout_gravity="center_horizontal"
         android:text="@string/button_save_contact"
          android:background="@drawable/button_style"
          android:textColor="#4A7D6B"></Button>
   </LinearLayout>
</ScrollView>