<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_vertical|center_horizontal"
    android:background="#F3EFEA"
    android:textColor="#4A7D6B"
    >
    
    <TextView
        android:id="@+id/empty"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text=""
        android:background="#F3EFEA"
        android:textColor="#4A7D6B"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="帳號"
        android:background="#F3EFEA"
        android:textColor="#4A7D6B"/>

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_username"
        android:imeOptions="actionNext"
        android:inputType="textPersonName|textCapWords"
        android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ" >
    </EditText>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="密碼"
        android:background="#F3EFEA"
        android:textColor="#4A7D6B"/>

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:imeOptions="actionNext"
        android:password="true"
        android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ" >
    </EditText>  

    <TextView
        android:id="@+id/empty"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text=""
        android:background="#F3EFEA"
        android:textColor="#4A7D6B"/>
    
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center"
        android:orientation="horizontal"
        android:padding="5dp"
        android:background="#F3EFEA"
        android:textColor="#4A7D6B">

        <Button
            android:id="@+id/LoginButton"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/button_login"
            android:background="@drawable/button_style"
            android:textColor="#4A7D6B">
        </Button>

        <TextView
         android:id="@+id/textView4"
         android:layout_width="20dp"
         android:layout_height="wrap_content"
         android:text=""
         android:background="#F3EFEA"
         android:textColor="#4A7D6B"/>
        
        <Button
            android:id="@+id/NewButton"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/button_new"
            android:background="@drawable/button_style"
            android:textColor="#4A7D6B">
        </Button>
    </LinearLayout>
</LinearLayout>